# pyt_hub

./: .flake8  README.md  pyproject.toml
src/: generators.py  processing.py
src/masks/: module_of_mask.py  widget.py
tests/: test_generators.py  test_masks.py  test_processing.py  test_widget.py
